--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,13 +33,13 @@
         <div>
           <input type="text" [(ngModel)]="userUpdate.name" name="name" placeholder="Update user's name" class="py-2" style="margin-right: 5px;">
           <button class="btn text-white border border-3 border-dark p-1" (click)="patchName(user.id)" style="background-color: orangered;">
-            Patch Name
+            Patch user's name
           </button>
         </div>
         <div>
           <input type="text" [(ngModel)]="userUpdate.age" name="age" placeholder="Update user's age" class="py-2 my-3" style="margin-right: 5px;">
           <button class="btn text-white border border-3 border-dark px-2 py-1" (click)="patchAge(user.id)" style="background-color: orangered;">
-            Patch Age
+            Patch user's age
           </button>
         </div>
         <button class="btn btn-warning text-white border border-3 border-dark py-0" (click)="updateUsers(user.id)">
